FIX - navigation items overflow.
If viewport height isn't enough, header menu
items overflowed and were invisible. Now there's
overflow with scroll.

--- a/Source/landing-page/styles/main.scss
+++ b/Source/landing-page/styles/main.scss
@@ -141,7 +141,7 @@ body {
         align-items: center;
         justify-content: center;
         background-color: var(--textCol);
-        padding: 20px 25px 90px 25px;
+        padding: 40px 25px 110px 25px;
         transform: translate(0, 101%);
         pointer-events: none;
         transition: transform 1s;
@@ -149,6 +149,10 @@ body {
             display: flex;
             flex-direction: column;
             align-items: center;
+            height: 100%;
+            width: 100%;
+            max-height: 280px;
+            overflow: auto;
         }
         &-item {
             margin: 0 0 40px 0;
