--- a/landing-page/styles/style.css
+++ b/landing-page/styles/style.css
@@ -273,7 +273,7 @@ body.lock {
   align-items: center;
   justify-content: center;
   background-color: var(--textCol);
-  padding: 20px 25px 90px 25px;
+  padding: 40px 25px 110px 25px;
   transform: translate(0, 101%);
   pointer-events: none;
   transition: transform 1s;
@@ -282,6 +282,10 @@ body.lock {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  width: 100%;
+  max-height: 280px;
+  overflow: auto;
 }
 .header__menu-item {
   margin: 0 0 40px 0;
